Purchase page background error on mobile fix

--- a/styles/buy.css
+++ b/styles/buy.css
@@ -15,6 +15,7 @@
 
   background-image: url("./Images/bg.jpg");
   background-size: cover;
+  background-position: center;
 
   display: flex;
   align-items: center;
